align box with search input vertically centered within header on People Finder home (currently vertically aligned top because of ie11 flex box issues, so height must be set explicitly).

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,3 +22,10 @@
   width: 100%;
   max-width: 150px;
 }
+
+// IE11 fix to vertically align center box within header
+.header > .box {
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    height: $header-height;
+  }
+}
